<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearCliente">

    <include
        layout="@layout/activity_plantilla_admin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="52dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="125dp"
        android:textColor="@color/black"
        android:text="@string/AdminCrearClienteTitulo"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold" />

    <View
        android:id="@+id/barra"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/textView"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@color/rojo_def" />

    <EditText
        android:id="@+id/nombreNewCliente"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/barra"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/plantilla1roja"
        android:ems="10"
        android:hint="@string/AdminCrearCLienteNomrbe"
        android:inputType="textPersonName"
        android:paddingLeft="15dp" />

    <EditText
        android:id="@+id/ccNewCliente"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="15dp"
        android:layout_below="@+id/nombreNewCliente"
        android:background="@drawable/plantilla1roja"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/AdminCrearClienteCC"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/saldoNewCliente"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/ccNewCliente"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/plantilla1roja"
        android:drawableLeft="@drawable/ic_money"
        android:ems="10"
        android:hint="@string/AdminCrearClienteSaldo"
        android:inputType="number"
        android:paddingLeft="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="170dp">


        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/confirmarNewCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/plantilla2rojo"
            android:text="@string/AdminCrearClienteBtnConfirmar" />

        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/canselaNewCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/plantilla2"
            android:layout_weight="1"
            android:textColor="@color/rojo_def"
            android:text="@string/AdminCrearClienteBtnCanselar" />
    </LinearLayout>
</RelativeLayout>