<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00000000"
    android:layout_height="wrap_content"
    tools:context=".MenuAdmin">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="22dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/plantilla3azul"
            android:orientation="vertical">

            <androidx.constraintlayout.utils.widget.MotionButton
                android:id="@+id/ActDatos"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/plantilla1"
                android:text="@string/menuCoActualizar"
                android:textColor="@color/azul_def"
                android:textSize="18sp" />

            <androidx.constraintlayout.utils.widget.MotionButton
                android:id="@+id/CreaCliente"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/plantilla1"
                android:text="@string/menuCoAcClientes"
                android:textColor="@color/azul_def"
                android:textSize="18sp" />

            <androidx.constraintlayout.utils.widget.MotionButton
                android:id="@+id/salirMenu"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/plantilla1"
                android:text="@string/menuCoSalir"
                android:textColor="@color/azul_def"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</RelativeLayout>