<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VistaPin">

    <include
        layout="@layout/activity_plantilla_admin"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="113dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <View
        android:id="@+id/barra"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@+id/titulo"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/plantilla2rojo" />

    <EditText
        android:id="@+id/pin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/barra"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/plantilla1roja"
        android:ems="10"
        android:hint="@string/AdminVistaPinPin"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="196dp"
        android:orientation="horizontal">


        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/plantilla2rojo"
            android:text="@string/AdminVistaPinBtnConfirmar"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/canselar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/plantilla2"
            android:text="@string/AdminCrearClienteBtnCanselar"
            android:textColor="@color/rojo_def"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>