<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoCorresponsal">


    <include
        layout="@layout/activity_plantilla_general"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="138dp"
        android:text="@string/actualizarTitulo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/textView2"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/plantilla1azul" />

    <EditText
        android:id="@+id/PasswordActual"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/textView2"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="58dp"
        android:hint="Contraseña Actual"
        android:background="@drawable/plantilla1"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp" />


    <EditText
        android:id="@+id/PasswordNueva"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/PasswordActual"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/plantilla1"
        android:ems="10"
        android:hint="Contraseña Nueva"
        android:inputType="textPersonName"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/ConfirmarPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/PasswordNueva"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/plantilla1"
        android:ems="10"
        android:hint="Confirmar Contraseña Nueva"
        android:inputType="textPersonName"
        android:paddingLeft="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="180dp">


        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/confirmarActCorr"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/plantilla1azul"
            android:text="@string/AdminCrearClienteBtnConfirmar"
            android:textColor="@color/white" />

        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/canselaActCorr"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/plantilla1azul2"
            android:text="@string/AdminCrearClienteBtnCanselar"
            android:textColor="@color/azul_def" />
    </LinearLayout>

</RelativeLayout>